tests/errors/vis_private_err/vis_private_sub.fs
module rec vis_private_err.vis_private_sub

let private privateFun () = ()
